test/pass/transform/constantFoldingString/print.twge
//---------------------------------//
//--- AST After constantFolding ---//
//---------------------------------//
block init {
    actions {
        print(text = "123456789");
    }
    checks {
    }
    triggers {
    }
}
