test/fail/codegen/blockMetadata/test.twge
block spawn {
    __test__ = 5000;
    actions {
        print(text = "test");
    }
}